--- a/package.json
+++ b/package.json
@@ -2,27 +2,32 @@
   "name": "todo-backend",
   "version": "1.0.0",
   "description": "할 일 관리 백엔드 API",
-  "main": "src/app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "jest"
   },
-  "keywords": ["todo", "backend", "api", "express"],
+  "keywords": [
+    "todo",
+    "backend",
+    "api",
+    "express"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
-    "uuid": "^9.0.1",
-    "mongoose": "^8.0.3"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=16.0.0"
